Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39712

[REG 5.3->5.4]: Android - eglError when returning from Activity launched with Intent

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.3.0, 5.4.0 Beta, 5.4.0 RC, 5.4.0
    • QPA
    • Galaxy Tab 2 8, Android 4.4.2 + Samsung Galaxy S3, Android 4.3 + Samsung Galaxy Note 2
    • Android
    • a0737f65a62a5d72f15f5f1196b86f16605d936b

    Description

      I have code that seems to work properly, but throws a huge number of errors in the console. The code has a qml button that calls into "NotificiationClient.java" which has been modified to have a few extra functions that calls the native android camera and handles the return from the camera. The errors are below

      E/[EGL-ERROR]( 7692): void __egl_platform_dequeue_buffer(egl_surface*):1618: failed to dequeue buffer from native window (0x65ec2e80); err = -19, buf = 0x0,max_allowed_dequeued_buffers 3
      ...//many many instances of this
      E/[EGL-ERROR]( 7692): void __egl_platform_dequeue_buffer(egl_surface*):1618: failed to dequeue buffer from native window (0x65ec2e80); err = -19, buf = 0x0,max_allowed_dequeued_buffers 3
      W/Qt      ( 7692): eglconvenience/qeglplatformcontext.cpp:319 (virtual void QEGLPlatformContext::swapBuffers(QPlatformSurface*)): QEGLPlatformContext::swapBuffers(): eglError: 12301, this: 0x63f93978 
      

      These errors seem to only appear when exiting the camera and returning to the qml code

      when looking in the logcat directly each [EGL-ERROR] is accompanied by the following

      06-17 11:54:49.471: E/BufferQueue(1822): [SurfaceView] dequeueBuffer: BufferQueue has been abandoned!
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            taipan BogDan Vatra
            jp36 James Pettitt
            Votes:
            3 Vote for this issue
            Watchers:
            11 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes